--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-typography": "^2.5.10",
+    "gatsby-plugin-yandex-metrika": "^2.5.0",
     "gatsby-source-filesystem": "^2.3.22",
     "gatsby-transformer-json": "^2.4.11",
     "node-sass": "^4.14.1",
